--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,9 @@ title: "Высшая математика, 2 курс"
 
 ### [ПЗ 20.4 Решение комплексных задач по теме "Числовые ряды"](t20-4.qmd)
 
+## Тема 21. Функциональные ряды
+
+### [ПЗ 21.3 Решение комплексных задач по теме "Функциональные ряды"](t21-3.qmd)
 
 
 
