--- a/t21-3.qmd
+++ b/t21-3.qmd
@@ -2,121 +2,12 @@
 
 {{< include commons/choose-variant-kpz.qmd >}}
 
-## I. Сходимость функциональных рядов
-
-### Задание 1. Найти радиус, интервал и область сходимости степенного ряда:
-
-::: {.panel-tabset group='variant' .hide-tabs}
-
-## &nbsp;
-
-$$\text{Вариант не выбран}\phantom{\displaystyle\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{( 8n-1 )( 2n+3 )}{( 4n-6 )}}$$
-
-$$\phantom{\displaystyle\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{\mathrm{arctg}~n}{1+{{n}^{2}}}}$$
-
-$$\phantom{\displaystyle\underset{n=1}{\overset{\infty }{\mathop \sum }}{{( \frac{3{{n}^{2}}+1}{2{{n}^{2}}+1} )}^n}}$$
-
-$$\phantom{\displaystyle\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{3n-2}{{{6}^n}}}$$
-
-
-## 1
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( n-2 )}^{3}}{{( x+3 )}^n}}{2n+3}$$
-
-## 2
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-5 )}^n}}{(3n-1)!\cdot{{2}^n}}$$
-
-## 3
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-5 )}^n}}{( 3n-1 )!\cdot{{2}^n}}$$
-
-## 4
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{2n{{( x-1 )}^n}}{{{( 3n+1 )}^{2}}}$$
-
-## 5
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-6 )}^n}}{(n+2)\cdot{{3}^n}}$$
-
-## 6
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{3n{{( x-2 )}^n}}{{{( 5n-8 )}^{3}}}$$
-
-## 7
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-2 )}^n}}{2n~{{3}^n}}$$
-
-## 8
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+2 )}^n}}{( 4n-1 )\cdot{{2}^n}}$$
-
-## 9
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{\sqrt{n}{{( x-2 )}^n}}{{{n}^{2}}+1}$$
-
-## 10
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{2}}{{( x+1 )}^n}}{( n+2 )!}$$
-
-## 11
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{n{{( x-4 )}^n}}{( 2n+1 )!~}$$
-
-## 12
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+3 )}^n}}{( 3n-1 )\cdot{{2}^n}}$$
-
-## 13
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{3}}{{( x+4 )}^n}}{( n+3 )!~}$$
-
-## 14
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{n{{( x-4 )}^n}}{{{( 4n-1 )}^{3}}~}$$
-
-## 15
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+2 )}^n}}{( 2n+1 )\cdot{{3}^n}~}$$
-
-## 16
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+4 )}^n}}{( 4n+1 )\cdot{{3}^n}}$$
-
-## 17
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{5}}{{( x+5 )}^n}}{( n+1 )~!}$$
-
-## 18
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-5 )}^n}}{( n+4 )~ln~( n+4 )}$$
-
-## 19
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-3 )}^n}}{( n+1 )\cdot{{5}^n}}$$
-
-## 20
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{( n+1 )\cdot{{( x+7 )}^n}}{{{( n+3 )}^{2}}{{2}^{n-1}}}$$
-
-## 21
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{( 3n-2 )\cdot{{( x-3 )}^n}}{{{( n+1 )}^{2}}\cdot{{2}^n}}$$
-
-## 22
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-2 )}^n}}{( 3n+1 )\cdot{{2}^n}}$$
-
-## 23
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-6 )}^n}}{( n+3 )\cdot{{2}^n}}$$
-
-## 24
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+6 )}^n}}{( 3n+1 )\cdot{{3}^n}}$$
-
-## 25
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{2}}{{( x+5 )}^n}}{{{3}^n}}$$
-
-## 26
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{2}}{{( x-3 )}^n}}{{{( {{n}^{4}}+1 )}^{2}}}$$
-
-## 27
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{2n(x+6)}^n}}{(2n+4)^3}$$
-
-## 28
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{(x-2)}^n}}{(2n-1)\cdot{{5}^n}}$$
-
-## 29
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{3}}{{(x-3)}^n}}{{{4}^n}}$$
-
-## 30
-$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{2}}{{(x-2)}^n}}{{{( {{n}^{2}}-1 )}^{2}}}$$
-
-:::
-
-## II. Ряды Маклорена
+## I. Ряды Маклорена
 
 Разложение в ряд Маклорена некоторых элементарных функций:
 $${{e}^{x}}=1+\frac{x}{1!}+\frac{{{x}^{2}}}{2!}+\frac{{{x}^{3}}}{3!}+\ldots +\frac{{{x}^{n}}}{n!}+\ldots x\in ( -\infty ;+\infty  )$$ 
 $$\sin x=x-\frac{{{x}^{3}}}{3!}+\frac{{{x}^{5}}}{5!}-\ldots +\frac{{{( -1 )}^{n-1}}~{{x}^{2n-1}}}{( 2n-1 )!}+\ldots, x\in ( -\infty ;+\infty  )$$ 
-$$\cos x=1-\frac{x^2}{2!}+\frac{{x^4}}{4!}-\ldots +\frac{(-1)^n}{x^{2n}}{(2n)!}+\ldots,~x\in(-\infty;\infty)$$ 
+$$\cos x=1-\frac{x^2}{2!}+\frac{{x^4}}{4!}-\ldots+\frac{(-1)^n x^{2n}}{(2n)!}+\ldots,~x\in(-\infty;\infty)$$ 
 $$\ln(1+x)=x-\frac{x^2}{2}+\frac{x^3}{3}-\ldots+\frac{(-1)^{n-1}x^n}{n}+\ldots,~x\in(-1;1)$$ 
 $$(1+x)^\alpha=1+\frac{\alpha }{1!}x+\frac{\alpha(\alpha-1)}{2!}{{x}^{2}}+\ldots$$
 $$+\frac{\alpha(\alpha-1)\ldots( \alpha -n+1)}{n!}{{x}^{n}}+\ldots$$
@@ -189,7 +80,7 @@ $$=1-2x+3{{x}^{2}}-4{{x}^{3}}+5{{x}^{4}}\ldots$$
 
 
 
-### Задание 2. Разложить в ряд Маклорена функцию:
+### Задание 1. Разложить в ряд Маклорена функцию:
 
 ::: {.panel-tabset group='variant' .hide-tabs}
 
@@ -296,4 +187,113 @@ $$\cos\left(\frac{3x}{4}\right)$$
 
 :::
 
+
+## II. Сходимость функциональных рядов
+
+### Задание 2. Найти радиус, интервал и область сходимости степенного ряда:
+
+::: {.panel-tabset group='variant' .hide-tabs}
+
+## &nbsp;
+
+$$\text{Вариант не выбран}\phantom{\displaystyle\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{( 8n-1 )( 2n+3 )}{( 4n-6 )}}$$
+
+$$\phantom{\displaystyle\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{\mathrm{arctg}~n}{1+{{n}^{2}}}}$$
+
+$$\phantom{\displaystyle\underset{n=1}{\overset{\infty }{\mathop \sum }}{{( \frac{3{{n}^{2}}+1}{2{{n}^{2}}+1} )}^n}}$$
+
+$$\phantom{\displaystyle\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{3n-2}{{{6}^n}}}$$
+
+
+## 1
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( n-2 )}^{3}}{{( x+3 )}^n}}{2n+3}$$
+
+## 2
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-5 )}^n}}{(3n-1)!\cdot{{2}^n}}$$
+
+## 3
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-5 )}^n}}{( 3n-1 )!\cdot{{2}^n}}$$
+
+## 4
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{2n{{( x-1 )}^n}}{{{( 3n+1 )}^{2}}}$$
+
+## 5
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-6 )}^n}}{(n+2)\cdot{{3}^n}}$$
+
+## 6
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{3n{{( x-2 )}^n}}{{{( 5n-8 )}^{3}}}$$
+
+## 7
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-2 )}^n}}{2n~{{3}^n}}$$
+
+## 8
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+2 )}^n}}{( 4n-1 )\cdot{{2}^n}}$$
+
+## 9
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{\sqrt{n}{{( x-2 )}^n}}{{{n}^{2}}+1}$$
+
+## 10
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{2}}{{( x+1 )}^n}}{( n+2 )!}$$
+
+## 11
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{n{{( x-4 )}^n}}{( 2n+1 )!~}$$
+
+## 12
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+3 )}^n}}{( 3n-1 )\cdot{{2}^n}}$$
+
+## 13
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{3}}{{( x+4 )}^n}}{( n+3 )!~}$$
+
+## 14
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{n{{( x-4 )}^n}}{{{( 4n-1 )}^{3}}~}$$
+
+## 15
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+2 )}^n}}{( 2n+1 )\cdot{{3}^n}~}$$
+
+## 16
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+4 )}^n}}{( 4n+1 )\cdot{{3}^n}}$$
+
+## 17
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{5}}{{( x+5 )}^n}}{( n+1 )~!}$$
+
+## 18
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-5 )}^n}}{( n+4 )~ln~( n+4 )}$$
+
+## 19
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-3 )}^n}}{( n+1 )\cdot{{5}^n}}$$
+
+## 20
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{( n+1 )\cdot{{( x+7 )}^n}}{{{( n+3 )}^{2}}{{2}^{n-1}}}$$
+
+## 21
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{( 3n-2 )\cdot{{( x-3 )}^n}}{{{( n+1 )}^{2}}\cdot{{2}^n}}$$
+
+## 22
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-2 )}^n}}{( 3n+1 )\cdot{{2}^n}}$$
+
+## 23
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x-6 )}^n}}{( n+3 )\cdot{{2}^n}}$$
+
+## 24
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{( x+6 )}^n}}{( 3n+1 )\cdot{{3}^n}}$$
+
+## 25
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{2}}{{( x+5 )}^n}}{{{3}^n}}$$
+
+## 26
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{2}}{{( x-3 )}^n}}{{{( {{n}^{4}}+1 )}^{2}}}$$
+
+## 27
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{2n(x+6)}^n}}{(2n+4)^3}$$
+
+## 28
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{(x-2)}^n}}{(2n-1)\cdot{{5}^n}}$$
+
+## 29
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{3}}{{(x-3)}^n}}{{{4}^n}}$$
+
+## 30
+$$\underset{n=1}{\overset{\infty }{\mathop \sum }}\frac{{{n}^{2}}{{(x-2)}^n}}{{{( {{n}^{2}}-1 )}^{2}}}$$
+
+:::
 
