--- a/index.qmd
+++ b/index.qmd
@@ -10,5 +10,9 @@ title: "Высшая математика, 2 курс"
 
 ### [ПЗ 21.3 Решение комплексных задач по теме "Функциональные ряды"](t21-3.qmd)
 
+## Тема 22. Ряды Фурье
+
+### [Лаб 22.3 Разложение в ряд Фурье ряды"](t22-3-fourie.qmd)
+
 
 
